# nvremote

./: .eslintrc.json  .gitignore  .prettierignore  CONTRIBUTING.md  CUsersccooperGitHubnvstreamerci-log.txt  GPG-PUBLIC-KEY.asc  LICENSE  PLAN.md  README.md  SECURITY.md  gcloud.bat  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  release.yml
apps/android/: build.gradle.kts  gradle.properties  settings.gradle.kts
apps/client-desktop/: .env.example  electron-builder.yml  package.json  tsconfig.json  vite.config.ts
apps/gateway/: Dockerfile  Makefile  README.md  go.mod
apps/host-agent/: Makefile  README.md  go.mod
apps/mac-client/: Package.swift
apps/server-api/: .env.example  Dockerfile  Dockerfile.prisma-push  cloudbuild-prisma.yaml  package.json  start.sh  tsconfig.json
apps/website/: .env.example  .gitignore  Dockerfile  README.md  next.config.js  package.json  sentry.client.config.ts  sentry.edge.config.ts  tailwind.config.ts  (+1 more)
docs/: GETTING_STARTED.md  PRODUCT-REQUIREMENTS.md
infra/: deploy-compose.yml  deploy-gcp.sh  deploy-website.sh  deploy.sh  setup-tls.sh  verify-deployment.sh
libs/: CMakeLists.txt
libs/crazystream-common/: CMakeLists.txt
libs/crazystream-common/include/cs/: common.h
libs/crazystream-common/include/cs/p2p/: stun_client.h
libs/crazystream-common/include/cs/qos/: feedback_packet.h  gaming_modes.h
libs/crazystream-common/include/cs/transport/: dtls_context.h  packet.h
libs/crazystream-common/src/transport/: dtls_context.cpp
libs/crazystream-host/: CMakeLists.txt
libs/crazystream-host/src/: main.cpp
libs/crazystream-host/src/audio/: wasapi_capture.h
libs/crazystream-host/src/capture/: capture_interface.h  dxgi_capture.cpp
libs/crazystream-host/src/encode/: nvenc_encoder.cpp
libs/crazystream-host/src/ipc/: pipe_server.cpp  pipe_server.h
libs/crazystream-host/src/qos/: qos_controller.cpp  qos_controller.h
libs/crazystream-host/src/session/: session_manager.cpp  session_manager.h
libs/crazystream-host/src/transport/: fec.h  udp_transport.cpp  udp_transport.h
libs/crazystream-viewer/: CMakeLists.txt  binding.gyp
libs/crazystream-viewer/src/: addon.cpp  viewer.cpp  viewer.h
libs/crazystream-viewer/src/audio/: opus_decoder.cpp  wasapi_playback.cpp  wasapi_playback.h
libs/crazystream-viewer/src/decode/: nvdec_decoder.h  videotoolbox_decoder.mm
libs/crazystream-viewer/src/input/: input_capture.h  input_sender.cpp  input_sender.h
libs/crazystream-viewer/src/qos/: stats_reporter.cpp  stats_reporter.h
libs/crazystream-viewer/src/render/: d3d11_renderer.cpp  d3d11_renderer.h
libs/crazystream-viewer/src/transport/: jitter_buffer.cpp  jitter_buffer.h  nack_sender.cpp  nack_sender.h  udp_receiver.cpp  udp_receiver.h
libs/gridstreamer-common/: CMakeLists.txt
libs/gridstreamer-common/include/cs/: common.h
libs/gridstreamer-common/include/cs/qos/: feedback_packet.h  gaming_modes.h
libs/gridstreamer-common/include/cs/transport/: dtls_context.h  packet.h
libs/gridstreamer-common/src/p2p/: ice_agent.cpp  stun_client.cpp
libs/gridstreamer-common/src/transport/: dtls_context.cpp
libs/gridstreamer-host/: CMakeLists.txt
libs/gridstreamer-host/src/: main.cpp
libs/gridstreamer-host/src/audio/: opus_encoder.cpp  wasapi_capture.cpp
libs/gridstreamer-host/src/capture/: dxgi_capture.h  nvfbc_capture.cpp  nvfbc_capture.h
libs/gridstreamer-host/src/encode/: encoder_interface.h  nvenc_encoder.h
libs/gridstreamer-host/src/ipc/: pipe_server.h
libs/gridstreamer-host/src/qos/: kalman_filter.h
libs/gridstreamer-host/src/session/: session_manager.cpp  session_manager.h
libs/gridstreamer-viewer/: CMakeLists.txt  binding.gyp
libs/gridstreamer-viewer/src/: addon.cpp  viewer.cpp  viewer.h
libs/gridstreamer-viewer/src/audio/: audio_playback_interface.h
libs/gridstreamer-viewer/src/decode/: d3d11va_decoder.cpp  d3d11va_decoder.h
libs/gridstreamer-viewer/src/input/: clipboard_sync.cpp  controller_capture.cpp
libs/gridstreamer-viewer/src/qos/: stats_reporter.h
libs/gridstreamer-viewer/src/render/: d3d11_renderer.cpp  render_surface.h  renderer_interface.h
libs/gridstreamer-viewer/src/transport/: nack_sender.cpp  udp_receiver.cpp
libs/nvremote-common/: CMakeLists.txt
libs/nvremote-common/include/cs/: common.h
libs/nvremote-common/include/cs/p2p/: ice_agent.h  turn_client.h
libs/nvremote-common/include/cs/qos/: feedback_packet.h  gaming_modes.h
libs/nvremote-common/include/cs/transport/: dtls_context.h  packet.h
libs/nvremote-common/src/p2p/: turn_client.cpp
libs/nvremote-common/src/transport/: dtls_context.cpp
libs/nvremote-host/: CMakeLists.txt
libs/nvremote-host/src/: main.cpp
libs/nvremote-host/src/audio/: opus_encoder.h
libs/nvremote-host/src/capture/: capture_interface.h  drm_capture.cpp  drm_capture.h  nvfbc_capture.cpp  nvfbc_capture.h
libs/nvremote-host/src/encode/: encoder_interface.h  jetson_encoder.cpp  jetson_encoder.h  nvenc_encoder.h
libs/nvremote-host/src/input/: clipboard_inject.cpp  clipboard_inject.h  controller_inject.cpp  controller_inject.h
libs/nvremote-host/src/ipc/: pipe_server.cpp  pipe_server.h
libs/nvremote-host/src/qos/: bandwidth_estimator.cpp  bandwidth_estimator.h  qos_controller.cpp  qos_controller.h
libs/nvremote-host/src/session/: session_manager.cpp  session_manager.h
libs/nvremote-host/src/transport/: fec.cpp  udp_transport.h
libs/nvremote-viewer/: CMakeLists.txt  binding.gyp
libs/nvremote-viewer/src/: addon.cpp  viewer.cpp
libs/nvremote-viewer/src/audio/: coreaudio_playback.h  coreaudio_playback.mm  opus_decoder.h  wasapi_playback.h
libs/nvremote-viewer/src/decode/: decoder_interface.h  nvdec_decoder.cpp  videotoolbox_decoder.h
libs/nvremote-viewer/src/input/: clipboard_sync.h  controller_capture.h  input_capture.cpp  input_sender.cpp
libs/nvremote-viewer/src/qos/: stats_reporter.cpp  stats_reporter.h
libs/nvremote-viewer/src/render/: d3d11_renderer.h  metal_renderer.h  metal_renderer.mm
libs/nvremote-viewer/src/transport/: jitter_buffer.cpp  jitter_buffer.h  nack_sender.h  udp_receiver.h
(+404 files in other folders)
